--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   },
   "lint-staged": {
     "*.@(ts|tsx)": [
+      "npm run dev",
       "npm run lint",
       "npm run format"
     ]
   },
   "dependencies": {
-    "lint-staged": "^15.2.2",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -39,6 +39,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "husky": "^9.0.10",
+    "lint-staged": "^15.2.2",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
