--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "next": "14.1.0",
+        "next-themes": "^0.2.1",
+        "openai": "^4.28.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "sonner": "^1.4.1",
         "tailwind-merge": "^2.2.1",
         "tailwindcss-animate": "^1.0.7"
     },
