--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-slot": "^1.0.2",
         "@supabase/supabase-js": "^2.39.7",
+        "base64-arraybuffer": "^1.0.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "lucide-react": "^0.338.0",
         "next": "14.1.0",
         "next-themes": "^0.2.1",
         "openai": "^4.28.0",
