--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
         "openai": "^4.28.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-markdown": "^9.0.1",
         "sonner": "^1.4.1",
         "tailwind-merge": "^2.2.1",
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.10",
         "@types/node": "^20.11.10",
         "@types/react": "^18.2.48",
         "@types/react-dom": "^18.2.18",
