--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
         ]
     },
     "dependencies": {
+        "@clerk/nextjs": "^4.29.7",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-slot": "^1.0.2",
+        "@supabase/auth-helpers-nextjs": "^0.9.0",
         "@supabase/supabase-js": "^2.39.7",
         "base64-arraybuffer": "^1.0.2",
         "class-variance-authority": "^0.7.0",
